Mass refactoring via OpenRewrite "UpdateToJava21" recipe.