@@ -11,9 +11,9 @@ public class MyBigApp2 {
 
 		// Create this user's ShowLet
 		Class<?> c = Class.forName(className);
-		Object o = c.newInstance();
+		Object o = c.getDeclaredConstructor().newInstance();
 		if (o instanceof Showlet) {
-			Showlet s = (Showlet) c.newInstance();
+			Showlet s = (Showlet) c.getDeclaredConstructor().newInstance();
 
 			// Now we have a showlet, make it do its thing:
 			s.show();
