@@ -8,11 +8,11 @@ public class StrCharAt {
     public static void main(String[] av) {
         String a = "A quick bronze fox";
 		for (int i=0; i < a.length(); i++) { // no forEach, need the index
-			String message = String.format(
-				"charAt is '%c', codePointAt is %3d, casted it's '%c'",
-					 a.charAt(i),
-					 a.codePointAt(i),
-					 (char)a.codePointAt(i));
+			String message = 
+				"charAt is '%c', codePointAt is %3d, casted it's '%c'".formatted(
+				a.charAt(i),
+				a.codePointAt(i),
+				(char)a.codePointAt(i));
 			System.out.println(message);
 		}
 	}
